fixed info hover not working on iOS
added fastclick.js - not sure why it's required.

--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -14,7 +14,7 @@ body {
 header {
 
   h1 {
-    font-size: 10vw;
+    font-size: 14vw;
     color: #301A05;
     letter-spacing: 0.7px;
     font-family: $pacifico;
